--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Divyashree Panda</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Divyashree
           <span class="text-primary">Panda</span>
         </h1>
-        <div class="subheading mb-5">Dubai UAE (971) 50 447 1605
+        <div class="subheading mb-5">DIC, Dubai UAE (971) 50447-1605
           <a href="mailto:divyashree.panda@gmail.com">divyashree.panda@gmail.com</a>
         </div>
         <p class="lead mb-5">I am an IIMB graduate (MBA) with more than 6 years of work experience in IT multinational firms & social startups. I have worked across domains in multiple roles of Sales, PreSales & Project Management. I am currently working as a part of the Global Leadership Team at Tech Mahindra, handling Strategic Alliances for Middle East & Africa. I am a data science enthusiast who loves exploring new gen technologies.</p>
