--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="https://www.linkedin.com/in/divyashreepanda/" target = "_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/divyashree06/Data-Science-Learning" target = "_blank">
+          <a href="https://github.com/divyashree06/Portfolio" target = "_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -98,40 +98,38 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2018 - Present</span>
+            <span class="text-primary">April 2017 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Strategy Consultant</h3>
+            <div class="subheading mb-3">Think Zone</div>
+            <ul>
+              <li>Scouted for potential center locations in 20+ villages & performed feasibility study and stakeholder analysis</li>
+              <li>Established Key Performance Indicators for daily operation processes in 6 centers affecting 300 + students</li> 
+              <li>Conceptualized & developed product roadmap for a new product ‘School in a Box’ for first-generation learners</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">March 2016 - April 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Tata Consultancy Services</div>
+            <ul>
+              <li>Developed high level document to consolidate the existing systems & provide dynamic online portal support</li>
+              <li>Developed low level document and led a team of 4 to code in PL/SQL & Mainframe environment</li> 
+              <li>Prepared Proof of Concept and led a team of 5 for a version control system migration project</li>
+              <li>Conceptualized & implemented Voice User Guide tool for 10 million + customers</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">Oct 2011 - April 2015</span>
           </div>
         </div>
 
@@ -147,24 +145,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Indian Institute of Management</h3>
+            <div class="subheading mb-3">MBA</div>
+            <div>General Management</div>
+            <p>GPA: 3.00</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">April 2015 - March 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">SOA University</h3>
+            <div class="subheading mb-3">Bachelors in Technology</div>
+            <div>Electronics & Telecommunication Engineering</div>
+            <p>GPA: 3.20</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">September 2007 - June 2011</span>
           </div>
         </div>
 
@@ -189,48 +188,37 @@
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-react"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+            <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-wordpress"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
+            <i class="fab fa-github"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Algorithms</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Classification (Logistic Regression, Decision Trees, k-NN, SVM, Naïve Bayes)</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Regression (Multivariate Linear Regression, Random Forest)</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Clustering (k-Means, Hierarchical)</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Time Series (ARIMA)</li>
         </ul>
       </div>
     </section>
@@ -240,8 +228,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a data science enthusiast, I enjoy most of my time learning new things. I am an avid reader.</p>
+        <p class="mb-0">When forced indoors, I dance my heart out. I am an aspiring nutrionist. I spend a large amount of my free time exploring the latest technology advancements in the data science world.</p>
       </div>
     </section>
 
@@ -249,34 +237,20 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Google Analytics Certification </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            Facebook Blueprint Certification </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            Six Sigma Green Belt Certified Professional</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            ISTQB Foundation Level</li>
         </ul>
       </div>
     </section>
